# get_package_share_directory

./: README.md
get_package_share_directory/: CMakeLists.txt  package.xml
get_package_share_directory/include/get_package_share_directory/: get_package_share_directory.hpp
get_package_share_directory/launch/: get_package_share_directory.launch.py
get_package_share_directory/src/: get_package_share_directory.cpp  main.cpp
